src/test/ui/transmutability/malformed-program-gracefulness/wrong-type-assume.stderr
error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:53:51
   |
LL |     assert::is_transmutable::<Src, Dst, Context, {0u8}, false, false, false>();
   |                                                   ^^^ expected `bool`, found `u8`

error[E0080]: evaluation of `assert::is_transmutable::<test::Src, test::Dst, test::Context, {0u8}, false, false, false>::{constant#0}` failed
  --> $DIR/wrong-type-assume.rs:26:15
   |
LL |             { from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:54:58
   |
LL |     assert::is_transmutable::<Src, Dst, Context, false, {0u8}, false, false>();
   |                                                          ^^^ expected `bool`, found `u8`

error[E0080]: evaluation of `assert::is_transmutable::<test::Src, test::Dst, test::Context, false, {0u8}, false, false>::{constant#0}` failed
  --> $DIR/wrong-type-assume.rs:26:15
   |
LL |             { from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:55:65
   |
LL |     assert::is_transmutable::<Src, Dst, Context, false, false, {0u8}, false>();
   |                                                                 ^^^ expected `bool`, found `u8`

error[E0080]: evaluation of `assert::is_transmutable::<test::Src, test::Dst, test::Context, false, false, {0u8}, false>::{constant#0}` failed
  --> $DIR/wrong-type-assume.rs:26:15
   |
LL |             { from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error[E0308]: mismatched types
  --> $DIR/wrong-type-assume.rs:56:72
   |
LL |     assert::is_transmutable::<Src, Dst, Context, false, false, false, {0u8}>();
   |                                                                        ^^^ expected `bool`, found `u8`

error[E0080]: evaluation of `assert::is_transmutable::<test::Src, test::Dst, test::Context, false, false, false, {0u8}>::{constant#0}` failed
  --> $DIR/wrong-type-assume.rs:26:15
   |
LL |             { from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0080, E0308.
For more information about an error, try `rustc --explain E0080`.
